# kou-tty

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: smoke.sh
skills/driving-terminal/: SKILL.md
skills/driving-terminal/references/: commands.md  json-protocol.md  troubleshooting.md  tui-recipes.md  viewer.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/daemon/: client.rs  handler.rs  mod.rs  registry.rs  server.rs
src/protocol/: mod.rs  request.rs  response.rs
src/terminal/: ansi.rs  cell.rs  emulator.rs  events.rs  grid.rs  keys.rs  mod.rs  state.rs
src/viewer/: index.html  mod.rs
tests/: ansi.rs  cli.rs  emulator.rs  grid.rs  keys.rs
