[package]
name = "kou-tty"
version = "0.1.0"
edition = "2024"
description = "Headless in-memory terminal emulator for AI agents, exposed as a CLI"
license = "Apache-2.0"
repository = "https://github.com/gfhfyjbr/kou-tty"
keywords = ["pty", "terminal", "agent", "tui", "headless"]
categories = ["command-line-utilities"]

[[bin]]
name = "kou-tty"
path = "src/main.rs"

[lib]
name = "kou_tty"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
dashmap = "6"
nanoid = "0.4"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vte = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
